add rbenv logic

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -17,5 +17,5 @@ platforms:
 
 suites:
 - name: default
-  run_list: ["recipe[jenkins-rolebook::master]"]
+  run_list: ["recipe[jenkins-rolebook::master"]
   attributes: {}
