--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -17,6 +17,6 @@ platforms:
 
 suites:
 - name: default
-  run_list: ["recipe[jenkins-rolebook::master]","recipe[jenkins-rolebook::test-kitchen]"]
+  run_list: ["recipe[jenkins-rolebook]"]
   attributes: {}
 
